--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ Inheritance
 Then done with book
 
 Personal improvements:
+- `try` blocks? just catch exceptions there in interpreter and do stuff
 - support `i+=1` or `i++` (or both lol)
 - add anonymous functions https://craftinginterpreters.com/functions.html#challenges
 - somehow make `print(func)` print out function name
